# ChatTraUtenti

./: CMakeLists.txt  Chat.cpp  Chat.h  ChatRegister.cpp  ChatRegister.h  IdCreator.cpp  IdCreator.h  Message.cpp  Message.h  User.cpp  User.h  main.cpp
Test/: ChatRegisterTest.cpp  ChatTest.cpp  MessageTest.cpp  Test.cpp  UserTest.cpp
